# fast_lio_loc_python3

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: robosense16.yaml  velodyne.yaml
include/: common_lib.h
include/IKFoM_toolkit/mtk/src/: mtkmath.hpp
launch/: localization_avia.launch  localization_robosense16.launch  localization_robosense16.launch.py  localization_velodyne.launch
map/: cornerMap.pcd  map-gongwei.pcd  map.pcd  map11.pcd  map2.pcd  map3.pcd  map4.pcd  map5.pcd  map6.pcd  map7.pcd  map_bk.pcd  mapwrong1.pcd  surfaceMap.pcd  trajectory.pcd
rviz_cfg/: loam_livox.rviz  localization.rviz
scripts/: global_localization.py  global_localization2.py  odom_tf_publisher.py  publish_initial_pose.py  publish_initial_pose2.py  publish_map_from_pcd.py  swap_coordinates.py  transform_fusion.py  transform_fusion2.py
src/: IMU_Processing.hpp  laserMapping _ori.cpp  laserMapping.cpp  laser_mapping_node.cpp  preprocess.cpp  preprocess.h
src/legacy/: laserMapping_ori_ros1.cpp
